tests/invalid-type/validator.cue
invalidBoolIntSent: {
	$0: {
		error: {
			message: string
		}
	}
}